--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,7 @@
 
 <ion-content padding>
   <p>Bem Vindo, {{nome}} !</p>
+  <p>Sexo: {{sexo}}</p>
   <ion-button [color]="cor" shape="round"
    expand="full" >
     Cor
@@ -22,5 +23,23 @@
     <ion-toggle [checked]="checked_humor" color="primary" (ionChange)="mudaHumor()" slot="end"> </ion-toggle>
   </ion-item>
 
+  <ion-item>
+    <ion-label>Sexo</ion-label>
+    <ion-select placeholder="sexo" (ionCharge)="selecionaSexo(Sevent)">
+    <ion-select-option value="feminino">Feminino</ion-select-option>
+    <ion-select-option value="masculino">Masculino</ion-select-option>
+    </ion-select>
+  </ion-item>
 
+  <ion-item>
+    <ion-label>Nome</ion-label>
+    <ion-input placeholder="nome" (ionChange)="defineNome(Sevent)"></ion-input>
+  </ion-item>
+
+  <ion-button padding routerLink="/detalhes" color="primary"
+  shape="round" expand="full" >
+     Ok
+   </ion-button>
+
+</ion-content> 
 
